syntax = "proto2";
package Bohan.Message;
import "BaseDefine.proto";
option java_package = "com.bohan.protobuf";
option optimize_for = LITE_RUNTIME;


//service id  0x0003
message MsgData{
	//cmd id:		0x0301
	required bytes from_user_id = 1;				//消息发送方
	required bytes to_session_id = 2;				//消息接受方
	required uint32 msg_id = 3;
	required uint32 create_time = 4; 
	required BaseDefine.MsgType msg_type = 5;
	required bytes msg_data = 6;
	optional bytes attach_data = 20;
}

message MsgDataAck{
	//cmd id:		0x0302
	required bytes user_id = 1;			//发送此信令的用户id
	required bytes session_id = 2;				
	required uint32 msg_id = 3;
	required BaseDefine.SessionType session_type = 4;
}

message MsgDataReadAck{
	//cmd id:		0x0303
	required bytes user_id = 1;			//发送此信令的用户id
	required bytes session_id = 2;			
	required uint32 msg_id = 3;
	required BaseDefine.SessionType session_type = 4;
}

message MsgDataReadNotify{
	//cmd id:		0x0304
	required bytes user_id = 1;			//发送此信令的用户id
	required bytes session_id = 2;		
	required uint32 msg_id = 3;
	required BaseDefine.SessionType session_type = 4;
}

message ClientTimeReq{
	//cmd id:		0x0305
}

message ClientTimeRsp{
	//cmd id:		0x0306
	required uint32 server_time = 1;
}

message UnreadMsgCntReq{
	//cmd id:		0x0307
	required bytes user_id = 1;
	optional bytes attach_data = 20;	
}

message UnreadMsgCntRsp{
	//cmd id:		0x0308
	required bytes user_id = 1;
	required uint32 total_cnt = 2;
	repeated BaseDefine.UnreadInfo unreadinfo_list = 3;
	optional bytes attach_data = 20;
}

message GetMsgListReq{
	//cmd id:		0x0309
	required bytes user_id = 1;
	required BaseDefine.SessionType session_type = 2;
	required bytes session_id = 3;
	required uint32 msg_id_begin = 4;
	required uint32 msg_cnt = 5;
	optional bytes attach_data = 20;
}

//对于群而言，如果消息数目返回的数值小于请求的cnt,则表示群的消息能拉取的到头了，更早的消息没有权限拉取。
//如果msg_cnt 和 msg_id_begin计算得到的最早消息id与实际返回的最早消息id不一致，说明服务器消息有缺失，需要
//客户端做一个缺失标记，避免下次再次拉取。
message GetMsgListRsp{
	//cmd id:		0x030a
	required bytes user_id = 1;
	required BaseDefine.SessionType session_type = 2;
	required bytes session_id = 3;
	required uint32 msg_id_begin = 4;
	repeated BaseDefine.MsgInfo msg_list = 5;
	optional bytes attach_data = 20;
}

message GetLatestMsgIdReq{
	//cmd id: 		0x030b
	required bytes user_id = 1;
	required BaseDefine.SessionType session_type = 2;
	required uint32 session_id = 3;
	optional bytes attach_data = 20;
}

message GetLatestMsgIdRsp{
	//cmd id:		0x030c
	required bytes user_id = 1;
	required BaseDefine.SessionType session_type = 2;
	required uint32 session_id = 3;
	required uint32 latest_msg_id = 4;
	optional bytes attach_data = 20;
}

message GetMsgByIdReq{
	//cmd id: 		0x030d
	required bytes user_id = 1;
	required BaseDefine.SessionType session_type = 2;
	required uint32 session_id = 3; 
	repeated uint32 msg_id_list = 4;
	optional bytes attach_data = 20;
}

message IMGetMsgByIdRsp{
	//cmd id:		0x030e
	required bytes user_id = 1;
	required BaseDefine.SessionType session_type = 2;
	required uint32 session_id = 3;
	repeated BaseDefine.MsgInfo msg_list = 4;
	optional bytes attach_data = 20;
}
